fixed box user visible

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -134,7 +134,7 @@ html {
     padding: 0 6px;
 }
 
-.dropdown--show~.header__dropdown {
+.dropdown--show .header__dropdown {
     visibility: visible;
     opacity: 1;
     -webkit-transform: scale(1);
@@ -557,6 +557,7 @@ html {
 .header__dropdown-site {
     position: absolute;
     width: 100%;
+    visibility: hidden;
     transition: transform 500ms cubic-bezier(0.23, 1, 0.32, 1), visibility 500ms cubic-bezier(0.23, 1, 0.32, 1), -webkit-transform 500ms cubic-bezier(0.23, 1, 0.32, 1);
 }
 
@@ -569,6 +570,9 @@ html {
 .header__dropdown-site.header__dropdown-site--isSelected {
     -webkit-transform: translateX(0);
     transform: translateX(0);
+}
+
+.dropdown--show .header__dropdown-site.header__dropdown-site--isSelected {
     visibility: visible;
 }
 
